[tool.poetry]
name = "intro-to-automation-with-selenium"
version = "0.1.0"
description = "Automatically fills a Google Form using Selenium"
authors = ["George Zhang <geetransit@gmail.com>"]
license = "MIT-0"
readme = "README.md"
repository = "https://github.com/GeeTransit/intro-to-automation-with-selenium"
packages = [
	{ include = "script.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
